[package]
name = "kitty"
version = "0.0.5"
description = "A Tauri App"
authors = [ "you" ]
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kitty_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }
anyhow = { version = "1", features = [ "backtrace" ] }
reqwest = { version = "0.11.22", features = [ "blocking" ] }
build-target = "0.4.0"
zip = "0.5"

[dependencies]
shoes = { path = "/home/hezhaozhao/shoes", features = ["ffi"] }
tauri = { version = "2.0.0-rc.0", features = [
  "tray-icon",
  # "icon-ico",
  "image-ico",
  "image-png"
  # "icon-png",
  # "devtools"
] }
serde_json = "1.0"
serde = "1.0.193"
rusqlite = "0.30.0"
sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
entity = { path = "./entity" }
protocols = { path = "./protocols" }
migration = { path = "./migration" }
tokio = { version = "1.34.0", features = [ "macros" ] }
tauri-plugin-process = "2.0.0-rc.0"
thiserror = "1.0.50"
anyhow = "1"
tauri-plugin-autostart = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"
reqwest = { version = "0.11.22", features = [ "json" ] }
kitty_proxy = { path = "/home/hezhaozhao/kitty_proxy" }
base64 = "0.21.7"
tauri-plugin-clipboard-manager = "2.0.0-rc.0"
log = "0.4.20"
simplelog = "0.12.1"
rustem_proxy = "0.1.5"
serde_yaml = "0.9"

[workspace]
members = [
  ".",
  "migration",
  "entity",
  "protocols"
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
default = [
  "xray",
  "hysteria"
]
# shoes_proxy is the new implementation using shoes library
shoes_proxy = []
# Legacy features (kept for compatibility with existing APIs)
xray = []
hysteria = []

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.0.0"
