[package]
name = "kitty"
version = "0.0.5"
description = "A Tauri App"
authors = [ "you" ]
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kitty_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
anyhow = { version = "1", features = [ "backtrace" ] }
reqwest = { version = "0.12", features = [ "blocking" ] }
build-target = "0.4.0"
zip = "0.5"

[dependencies]
# 使用 GitHub 依赖
shoes = { git = "https://github.com/kitty-eu-org/shoes.git", branch = "kitty", features = [ "ffi" ] }
# 新增依赖以支持 shoes 的需求（版本与 shoes 匹配）
rand = "0.9"
rustls = "0.23"
socket2 = "0.6"
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
tauri = { version = "2.0", features = [
  "tray-icon",
  # "icon-ico",
  "image-ico",
  "image-png"
  # "icon-png",
  # "devtools"
] }
serde_json = "1.0"
serde = "1.0.193"
rusqlite = "0.30.0"
sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
entity = { path = "./entity" }
protocols = { path = "./protocols" }
migration = { path = "./migration" }
tokio = { version = "1.34.0", features = [ "macros" ] }
tauri-plugin-process = "2.0"
thiserror = "1.0.50"
anyhow = "1"
tauri-plugin-autostart = "2.0"
tauri-plugin-notification = "2.0"
reqwest = { version = "0.12", features = [ "json" ] }
base64 = "0.22"
tauri-plugin-clipboard-manager = "2.0"
log = "0.4"
simplelog = "0.12.1"
rustem_proxy = "0.1.5"
serde_yaml = "0.9"

[workspace]
members = [
  ".",
  "migration",
  "entity",
  "protocols"
]

[workspace.dependencies]
# 使用与 shoes 兼容的版本（根据 shoes Cargo.lock）
rand = "0.9"
rustls = "0.23"
hyper = "1.0"
hyper-util = "0.1"
http = "1"
h2 = "0.4"
socket2 = "0.6"
webpki-roots = "1"
thiserror = "1.0"
serde = "1.0"
tokio = "1.34"
# sqlx 版本与 sea-orm 0.12 兼容
sqlx = { version = "0.7", features = ["runtime-tokio-rustls"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
default = [
  "xray",
  "hysteria"
]
# shoes_proxy is the new implementation using shoes library
shoes_proxy = []
# Legacy features (kept for compatibility with existing APIs)
xray = []
hysteria = []

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.0.0"
