[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
port_scanner = "0.1.5"
anyhow = "1"

[dependencies.sea-orm]
version = "0.12.6" # sea-orm version

[features]
xray = []
hysteria = []
default = [
  "xray",
  "hysteria"
]
