[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
rand = "0.8.5"
url = { version = "2.5.0", optional = true, features = ["default"] }
base64 = { version = "0.21.7", optional = true, features = ["std"] }
sea-orm = "0.12.6"


[features]
hysteria = []
default = ["xray", "hysteria"]
xray = ["dep:url", "dep:base64"]
