[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
serde = { version = "1.0.195", features = [ "derive" ] }
serde_json = "1.0.111"
shared_child = "1.0.0"
uuid = { version = "1.6.1", features = [ "v4" ] }
